--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -9,6 +9,6 @@
     {% block content %}{% endblock content %}
     {% include "blog/partials/_pagination.html" %}
     {% include "blog/partials/_footer.html" %}
-    
+    {% include "blog/partials/_temp.html" %}
 </body>
 </html>
