--- a/djangoapp/blog/templates/blog/partials/_footer.html
+++ b/djangoapp/blog/templates/blog/partials/_footer.html
@@ -1,1 +1,9 @@
-<h4>footer</h4>
+<footer class="footer section-wrapper">
+    <div class="section-content-wide">
+      <div class="section-gap">
+        <div class="center">
+          <a href="#"> © Blog de Matias - Todos os direitos reservados. </a>
+        </div>
+      </div>
+    </div>
+  </footer>
