--- a/djangoapp/blog/templates/blog/partials/_temp.html
+++ b/djangoapp/blog/templates/blog/partials/_temp.html
@@ -14,7 +14,7 @@
     dignum amaverunt.
     <a href="http://loripsum.net/" target="_blank">Poterat autem inpune;</a>
   </p>
-  <img src="https://picsum.photos/1920/1080/?rand=1" />
+  <img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=1" />
   <p>
     <i>Quo tandem modo?</i>
     <i>Quod ea non occurrentia fingunt, vincunt Aristonem;</i>
@@ -64,7 +64,7 @@
     >
     Qui autem esse poteris, nisi te amor ipse ceperit?
   </p>
-  <p><img src="https://picsum.photos/1920/1080/?rand=2" /></p>
+  <p><img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=2" /></p>
   <ul>
     <li>Ratio enim nostra consentit, pugnat oratio.</li>
     <li>Ab hoc autem quaedam non melius quam veteres, quaedam omnino relicta.</li>
@@ -86,7 +86,7 @@
     eriperes P. Claudii libidini, qui tum erat summo ne imperio, dederetur. Si
     verbum sequimur, primum longius verbum praepositum quam bonum.
   </p>
-  <p><img src="https://picsum.photos/1920/1080/?rand=3" /></p>
+  <p><img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=3" /></p>
   <p>
     Itaque dicunt nec dubitant: mihi sic usus est, tibi ut opus est facto, fac. Si
     longus, levis; At cum de plurimis eadem dicit, tum certe de maximis. Et
@@ -146,7 +146,7 @@
     maximum malum neglegi. <i>Graccho, eius fere, aequalí?</i> Illis videtur, qui
     illud non dubitant bonum dicere -;
   </p>
-  <img src="https://picsum.photos/1920/1080/?rand=4" />
+  <img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=4" />
   <ul>
     <li>Ut alios omittam, hunc appello, quem ille unum secutus est.</li>
     <li>
@@ -177,7 +177,7 @@
     <dt><dfn>Bork</dfn></dt>
     <dd>Sed ad illum redeo.</dd>
   </dl>
-  <p><img src="https://picsum.photos/1920/1080/?rand=5" /></p>
+  <p><img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=5" /></p>
   <p>
     Quamquam te quidem video minime esse deterritum. Respondeat totidem verbis.
     <a href="http://loripsum.net/" target="_blank">Si longus, levis.</a> Et quidem
@@ -226,7 +226,7 @@
     Gracchum patrem non beatiorem fuisse quam fillum, cum alter stabilire rem
     publicam studuerit, alter evertere.
   </blockquote>
-  <p><img src="https://picsum.photos/1920/1080/?rand=6" /></p>
+  <p><img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=6" /></p>
   <h3>Nam Pyrrho, Aristo, Erillus iam diu abiecti.</h3>
   <p>
     Certe, nisi voluptatem tanti aestimaretis.
@@ -310,7 +310,7 @@
     <dt><dfn>Bork</dfn></dt>
     <dd>Quamquam te quidem video minime esse deterritum.</dd>
   </dl>
-  <p><img src="https://picsum.photos/1920/1080/?rand=8" /></p>
+  <p><img loading="lazy" alt="Change me" src="https://picsum.photos/1920/1080/?rand=8" /></p>
   <p>
     Quae hic rei publicae vulnera inponebat, eadem ille sanabat. Alterum
     significari idem, ut si diceretur, officia media omnia aut pleraque servantem
