--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -4,11 +4,20 @@
   <main class="main-content section-wrapper">
     <div class="section-content-wide">
       <div class="section-gap">
+        {% if page_obj %}
         <div class="card-grid">
           {% for post in page_obj %}
             {% include 'blog/partials/_post-card.html' with i=forloop.counter0 %}
           {% endfor %}
+
         </div>
+        {% else %}
+          <div class="not-found center">
+            <h1>Nada encontreado ⚠️</h1>
+            <p>Página não encontrada, para voltar, clique <a href="{% url "blog:index" %}">AQUI</a></p>
+          </div>
+        {% endif %}
+
       </div>
     </div>
   </main>
