--- a/djangoapp/blog/static/blog/css/style.css
+++ b/djangoapp/blog/static/blog/css/style.css
@@ -237,6 +237,11 @@ html,
   margin-inline: auto;
   font-size: inherit;
 }
+.CodeMirror{
+  height: auto !important;
+  font-size: var(--fs-smlr)!important;
+  padding: var(--spacing-smlst) !important;
+}
 .search-input {
   width: 100%;
   background-color: transparent;
@@ -293,8 +298,8 @@ html,
 }
 .single-post-content img{
   padding-top: var(--spacing-smlst);
-  width: 100%;
-  height: 100%;
+  display: block;
+  margin: 0 auto;
   object-fit: cover; 
 }
 .single-post-title,
