--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   {% include 'blog/partials/_head.html' %}
+  {% block additional_head %}{% endblock additional_head %}
 </head>
 <body>
   <div class="blog-wrapper">
@@ -19,5 +20,7 @@
       {% include 'blog/partials/_footer.html' %}
     {% endif %}
   </div>
+
+  <script src='{% static "blog/js/codemirror.js" %}'></script> 
 </body>
 </html>
