--- a/djangoapp/blog/templates/blog/partials/_footer.html
+++ b/djangoapp/blog/templates/blog/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer section-wrapper">
+{% load static %}<footer class="footer section-wrapper">
     <div class="section-content-wide">
       <div class="section-gap">
         <div class="center">
