--- a/djangoapp/blog/templates/blog/pages/post.html
+++ b/djangoapp/blog/templates/blog/pages/post.html
@@ -64,37 +64,17 @@
       <div class="separator"></div>
       <div class="single-post-content">
         {{post.content | safe}}
-        
-        <div class="post-tags">
-          <span>Tags: </span>
-
-         
-          <a class="post-tag-link" href="#">
-            <i class="fa-solid fa-link"></i>
-            <span>{{post.tag}}</span>
-          </a>
-          
-          {% comment %} <a class="post-tag-link" href="#">
-            <i class="fa-solid fa-link"></i>
-            <span>Testando</span>
-          </a>
-          <a class="post-tag-link" href="#">
-            <i class="fa-solid fa-link"></i>
-            <span>Atenção</span>
-          </a>
-          <a class="post-tag-link" href="#">
-            <i class="fa-solid fa-link"></i>
-            <span>Obrigado</span>
-          </a>
-          <a class="post-tag-link" href="#">
-            <i class="fa-solid fa-link"></i>
-            <span>Educação</span>
-          </a>
-          <a class="post-tag-link" href="#">
-            <i class="fa-solid fa-link"></i>
-            <span>Python</span>
-          </a> {% endcomment %}
-        </div>
+        {% if post.tag.exists %}
+          <div class="post-tags">
+            <span>Tags: </span>
+            {% for tag in post.tag.all %}
+              <a class="post-tag-link" href="{% url "blog:tag" tag.slug %}">
+                <i class="fa-solid fa-link"></i>
+                <span>{{tag.name}}</span>
+              </a>
+            {% endfor %}
+          </div>
+        {% endif %}
         
       </div>
     
