--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -13,7 +13,7 @@
         </div>
         {% else %}
           <div class="not-found center">
-            <h1>Nada encontreado ⚠️</h1>
+            <h1>Nada encontrado ⚠️</h1>
             <p>Página não encontrada, para voltar, clique <a href="{% url "blog:index" %}">AQUI</a></p>
           </div>
         {% endif %}
